quick CSS bug fix for overflowing issues and also update the code snippets section to include a description

--- a/src/scss/_movies.scss
+++ b/src/scss/_movies.scss
@@ -33,7 +33,7 @@
 				font-size: 12px;
 			}
 			.movie-title {
-				width: 100%;
+				width: calc(100% - 10px);
 				padding: 0 5px;
 				display: inline-block;
 				line-height: 1.25em;
